Merge pull request #22
* adjust-logging-and-fix-swagger-config-for-api-gateway